# lightray

./: .gitignore  CMakeLists.txt  build.cmd  vcpkg.json
include/lightray/: drawing.h  random.h  raylib_application.h  raylib_window.h  shape.h
src/: CMakeLists.txt  main.cpp  raylib_application.cpp  raylib_application.h  raylib_window.cpp
src/examples/: CMakeLists.txt  example1.cpp  example2.cpp
src/lightray/: CMakeLists.txt  drawing.cpp  random.cpp  raylib_application.cpp  raylib_window.cpp  shape.cpp
