file(GLOB SOURCE_FILES *.cpp)
file(GLOB INCLUDE_FILES *.h)

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_executable(example1d example1.cpp)
    target_include_directories(example1d PRIVATE ${raylib_INCLUDE_DIRS})
    target_link_libraries(example1d PRIVATE lightrayd ${raylib_LIBRARIES})
    add_dependencies(example1d lightrayd)
else()
    add_executable(example1 example1.cpp)
    target_include_directories(example1 PRIVATE ${raylib_INCLUDE_DIRS})
    target_link_libraries(example1 PRIVATE lightray ${raylib_LIBRARIES})
    add_dependencies(example1 lightray)
endif()