if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_executable(example1d example1.cpp)
    target_include_directories(example1d PRIVATE ${raylib_INCLUDE_DIRS})
    target_link_libraries(example1d PRIVATE lightrayd ${raylib_LIBRARIES})
    add_dependencies(example1d lightrayd)

    add_executable(example2d example2.cpp)
    target_include_directories(example2d PRIVATE ${raylib_INCLUDE_DIRS})
    target_link_libraries(example2d PRIVATE lightrayd ${raylib_LIBRARIES})
    add_dependencies(example2d lightrayd)
else()
    add_executable(example1 example1.cpp)
    target_include_directories(example1 PRIVATE ${raylib_INCLUDE_DIRS})
    target_link_libraries(example1 PRIVATE lightray ${raylib_LIBRARIES})
    add_dependencies(example1 lightray)

    add_executable(example2 example2.cpp)
    target_include_directories(example2 PRIVATE ${raylib_INCLUDE_DIRS})
    target_link_libraries(example2 PRIVATE lightray ${raylib_LIBRARIES})
    add_dependencies(example2 lightray)
endif()