INCLUDE_DIRECTORIES(${lightray_SOURCE_DIR}/include)
FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES ${lightray_SOURCE_DIR}/include/lightray/*.h)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
add_library(lightrayd ${INCLUDE_FILES} ${SOURCE_FILES})
target_include_directories(lightrayd PRIVATE ${raylib_INCLUDE_DIRS})
target_link_libraries(lightrayd PRIVATE ${raylib_LIBRARIES})
#target_link_libraries(ivfuid generatord gladd ivfd)
#add_dependencies(ivfuid ivfd)
install_targets(/lib lightrayd)
else()
add_library(lightray ${INCLUDE_FILES} ${SOURCE_FILES})
target_include_directories(lightray PRIVATE ${raylib_INCLUDE_DIRS})
target_link_libraries(lightray PRIVATE ${raylib_LIBRARIES})
#add_dependencies(ivfui ivf)
INSTALL_TARGETS(/lib lightray)
endif() 

